deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: horizon-backend
spec:
  selector:
    app: horizon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
